Nixed some manual boxing.
git-svn-id: https://samskivert.googlecode.com/svn/trunk@2733 6335cc39-0255-0410-8fd6-9bcaacd3b74c